--- a/themes/omekahispanicliverpool/config.ini
+++ b/themes/omekahispanicliverpool/config.ini
@@ -1,18 +1,24 @@
 [config]
 
-; Logo
-logo.type = "file"
-logo.options.label = "Logo File"
-logo.options.description = "Choose a logo file. This will replace the site title in the header of the theme. Recommended maximum width for the logo is 500px."
-logo.options.validators.count.validator = "Count"
-logo.options.validators.count.options.max = "1"
+; HLCC Page Description
+hlcc_page_description.type = "textarea"
+hlcc_page_description.options.label = "Introductory Paragraph on Frontpage"
+hlcc_page_description.options.description = "Enter a description"
+hlcc_page_description.options.rows = "10"
+hlcc_page_description.options.attribs.class = "html-input"
 
-; Header Background Image
-header_image.type = "file"
-header_image.options.label = "Header Image"
-header_image.options.description = "Choose an image file to display below your header. Recommended max height is 100px."
-header_image.options.validators.count.validator = "Count"
-header_image.options.validators.count.options.max = "1"
+; HLCC Web Disclaimer
+hlcc_web_disclaimer.type = "textarea"
+hlcc_web_disclaimer.options.label = "Disclaimer/Privacy Policy Text in Footer"
+hlcc_web_disclaimer.options.description = "Enter a disclaimer/privacy policy text here"
+hlcc_web_disclaimer.options.rows = "10"
+hlcc_web_disclaimer.options.attribs.class = "html-input"
+
+; Facebook Link
+facebook_link.type = "text"
+facebook_link.options.label = "Facebook Link"
+facebook_link.options.description = "Link to a Facebook Page/Profile/Group"
+facebook_link.options.maxlength = "60"
 
 display_featured_item.type = "checkbox"
 display_featured_item.options.label = "Display Featured Item"
@@ -24,54 +30,58 @@ display_featured_collection.options.label = "Display Featured Collection"
 display_featured_collection.options.description = "Check this box if you wish to show the featured collection on the homepage."
 display_featured_collection.options.value = "1"
 
-display_featured_exhibit.type = "checkbox"
-display_featured_exhibit.options.label = "Display Featured Exhibit"
-display_featured_exhibit.options.description = "Check this box if you wish to show the featured exhibit on the homepage."
-display_featured_exhibit.options.value = "1"
-
-homepage_recent_items.type = "text"
-homepage_recent_items.options.label = "Homepage Recent Items"
-homepage_recent_items.options.description = "Choose a number of recent items to be displayed on the homepage."
-homepage_recent_items.options.maxlength = "2"
-
-homepage_text.type = "textarea"
-homepage_text.options.label = "Homepage Text"
-homepage_text.options.description = "Add some text to be displayed on your homepage."
-homepage_text.options.rows = "5"
-homepage_text.options.attribs.class = "html-input"
-
-footer_text.type = "textarea"
-footer_text.options.label = "Footer Text"
-footer_text.options.description = "Add some text to be displayed in your theme's footer."
-footer_text.options.rows = "5"
-footer_text.options.attribs.class = "html-input"
-
-display_footer_copyright.type = "checkbox"
-display_footer_copyright.options.label = "Display Copyright in Footer"
-display_footer_copyright.options.description = "Check this box if you wish to display your site's copyright information in the footer."
-
-use_advanced_search.type = "checkbox"
-use_advanced_search.options.label = "Use Advanced Site-wide Search"
-use_advanced_search.options.description = "Check this box if you wish to allow users to search your whole site by record (i.e. item, collection, file) and choose their boolean method."
-use_advanced_search.value = "1"
-
 [groups]
 
-head_foot.options.legend = "Header and Footer"
-head_foot.elements[] = "logo"
-head_foot.elements[] = "header_image"
-head_foot.elements[] = "footer_text"
-head_foot.elements[] = "display_footer_copyright"
-head_foot.elements[] = "use_advanced_search"
-
-homepage.options.legend = "Homepage"
+homepage.options.legend = "Editable Options on Homepage"
+homepage.elements[] = "hlcc_page_description"
+homepage.elements[] = "hlcc_web_disclaimer"
+homepage.elements[] = "facebook_link"
 homepage.elements[] = "display_featured_item"
 homepage.elements[] = "display_featured_collection"
-homepage.elements[] = "display_featured_exhibit"
-homepage.elements[] = "homepage_recent_items"
-homepage.elements[] = "homepage_text"
+
 
 [plugins]
 
 ; Exclude fields from plugins, if they wish.
 exclude_fields = "display_featured_item,display_featured_collection,display_featured_exhibit,homepage_recent_items,homepage_text"
+
+
+; MORE OPTIONS
+; ----
+; Below are samples of the different types of Configuration options and input types
+; Remove the semi-colon before the indentifier (e.g. "; sample_text.options" -> "sample_text.options")
+
+; Sample Checkbox
+; sample_checkbox.type = "checkbox"
+; sample_checkbox.options.label = "Sample Checkbox"
+; sample_checkbox.options.description = "This is a sample checkbox, for both toggles and selectors."
+; sample_checkbox.options.value = "1"
+
+; Sample Text Input
+; sample_text.type = "text"
+; sample_text.options.label = "Sample Text"
+; sample_text.options.description = "This is a sample input text field, usually for shorter lines of text."
+; sample_text.options.maxlength = "60"
+
+; Sample Text Area
+; short_about_us.type = "textarea"
+; short_about_us.options.label = "Sample Textarea"
+; short_about_us.options.description = "This is a sample textarea, for longer paragraphs of text."
+; short_about_us.options.rows = "5"
+; short_about_us.options.attribs.class = "html-input"
+
+; Sample Select List
+; sample_select.type = "select"
+; sample_select.options.label = "Sample Select List"
+; sample_select.options.description = "This is a sample select list."
+; sample_select.options.multiOptions.option01 = "Option #1"
+; sample_select.options.multiOptions.option02 = "Option #2"
+; sample_select.options.multiOptions.option03 = "Option #3"
+; sample_select.options.value = "option01"
+
+; Sample File
+; sample_file.type = "file"
+; sample_file.options.label = "Sample File Picker"
+; sample_file.options.description = "This is a sample file picker for adding and uploading images and other files."
+; sample_file.options.validators.count.validator = "Count"
+; sample_file.options.validators.count.options.max = "1"
